downgrade to Java 1.8